# spritist

./: .gitignore  LICENSE  README.md  index.html  main.js  package.json  styles.css
.github/workflows/: main.yml
script/: api.js  blk.js  c16.js  charset.js  datahelper.js  gif.js  menu.js  palette.js  photoalbum.js  png.js  s16.js  sketch.js  spr.js  sprite.js  spritesheet.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  config.rs  edit.rs  export.rs  file.rs  format.rs  history.rs  import.rs  main.rs  menu.rs  palette.rs  selection.rs  state.rs  view.rs
src-tauri/src/format/: blk.rs  bmp.rs  c16.rs  dta.rs  m16.rs  photo_album.rs  png.rs  s16.rs  spr.rs
ui/: index.html
ui/script/: about.js  drag.js  export-gif.js  export-png.js  export-spritesheet.js  import-spritesheet.js  main.js  selection.js  sprite.js  theme.js
ui/style/: style.css
